--- a/manifest.json
+++ b/manifest.json
@@ -1,12 +1,12 @@
 {
-    "latest-launcher-version":"0.1",
+    "latest_launcher_version":"0.1",
     "games": {
-        "modded-gulag-reborn-1": {
+        "modded_gulag_reborn_1": {
             "name":"Modded Gulag Reborn",
-            "game-version": "1.21.1",
-            "modpack-version": "0.1 BETA",
-            "configs-link": "",
-            "modlist-link": ""
+            "game_version": "1.21.1",
+            "modpack_version": "0.1 BETA",
+            "configs_link": "",
+            "modlist_link": ""
         }
     }
 }
