--- a/manifest.json
+++ b/manifest.json
@@ -5,8 +5,7 @@
             "name":"Modded Gulag Reborn",
             "game_version": "1.21.1",
             "modpack_version": "0.1 BETA",
-            "configs_link": "",
-            "modlist_link": ""
+            "download_link":""
         }
     }
 }
