--- a/manifest.json
+++ b/manifest.json
@@ -6,6 +6,7 @@
             "game_version": "1.21.1",
             "modpack_version": "0.1 BETA",
             "download_link":"16BErmiy2HNC4mf-PPR119Xn3V66Yt6Cl",
+			"drm":"1vnD4oaTBtE9NiQrlnpJAQ8Q2r1CsUEzm",
 			"engine_link":"https://maven.neoforged.net/releases/net/neoforged/neoforge/21.1.219/neoforge-21.1.219-installer.jar",
 			"engine_name":"neoforge-21.1.219"
         }
