--- a/manifest.json
+++ b/manifest.json
@@ -7,8 +7,8 @@
             "modpack_version": "0.1 BETA",
             "download_link":"16BErmiy2HNC4mf-PPR119Xn3V66Yt6Cl",
 			"drm":"1vnD4oaTBtE9NiQrlnpJAQ8Q2r1CsUEzm",
-			"engine_link":"https://maven.neoforged.net/releases/net/neoforged/neoforge/21.1.219/neoforge-21.1.219-installer.jar",
-			"engine_name":"neoforge-21.1.219"
+			"engine_link":"https://maven.minecraftforge.net/net/minecraftforge/forge/1.20.1-47.4.16/forge-1.20.1-47.4.16-installer.jar",
+			"engine_name":"1.20.1-forge-47.4.16"
         }
     }
 }
